--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
@@ -179,7 +179,7 @@
                 <p class="h1 regular">
                     ACHIEVEMENTS
                 </p>
-                <p class="h3">SMALL WINS</p>
+                <p class="h2">SMALL WINS</p>
                 <p class="body-text2">
                     <span class="body-text bold">UX decision</span><br><br>
                     In our conversations, the client kept using several units  — Wattage, ton, kg, cubic meter, liter, etc — interchangeably. That was because electricity converts to power to certain amount of hydrogen, and pressurized hydrogen can be measured by weight but also by volume (at a certain pressure). But this was very confusing to non-technical party. so we made a decision to stick to one unit (kg) during our discussion.
@@ -197,17 +197,28 @@
                 </p>
                 <br><br>
 
-                <p class="h3">BIG WINS</p>
+                <p class="h2">BIG WINS</p>
+                <p class="body-text2">
+                    <span class="body-text bold">Clear understanding of the product ecosystem</span><br><br>
+                    Established a good understanding of the product ecosystem which consists of multiple products. Each of products were accompanied by an agreed definition and its target users.
+                </p>
+                <br>
+                <br>
+                <img class= "align-center" src="/Assets/hydrogen/systems-interdependency.png">
+                <p class="caption">We established a clear understanding in the interconnectivity of the system.</p>
+                <br><br>
+
+
                 <p class="body-text2">
                     <span class="body-text bold">New product roadmap with new priorities</span><br><br>
                     Realising massive scope leading to creating a new roadmap, facilitating an agreement to readjust the project schedule and scope.
                 </p>
                 <br><br>
-                <p class="body-text2">
-                    <span class="body-text bold">Clear understanding of the product ecosystem</span><br><br>
-                    Established a good understanding of the product ecosystem which consists of multiple products. Each of products were accompanied by an agreed definition and its target users.
-                </p>
+                <img class= "align-center" src="/Assets/hydrogen/roadmap.png">
+                <p class="caption">Based on the new agreement, I created a product roadmap.</p>
                 <br><br>
+                
+
                 <p class="body-text2">
                     <span class="body-text bold">Gaps addressing the need for a new role</span><br><br>
                     Identified gaps in business requirements to create a successful product ecosystem, which resulted in a new hire (BA).
@@ -215,23 +226,29 @@
             </div>
 
 
-            <div class= "container full-width align-center">
-                <p class="h1 regular align-center">
-                    OUTPUTS
-                </p>
-                <p class="h3">PRODUCT ROADMAP</p>
-                <img class= "col8-width align-center" src="/Assets/hydrogen/roadmap.png">
-                <p class="caption">Based on the new agreement, I created a product roadmap.</p>
+            <div class= "container col8-width">             
                 <br><br><br><br><br>
 
-                <p class="h3 no-margin">DESIGN DELIVERABLES</p>
-                <div class="container col8-width no-padding">
-                    <p class="body-text2">UX design was delivered based on the newly agreed scope, addressing various archetypes’ needs to help them to meet their objectives.</p>
-                </div>
+                <p class="h1 regular no-margin">DESIGN DELIVERABLES</p>
+                <br>
+                <p class="body-text2">UX design was delivered based on the newly agreed scope, addressing various archetypes’ needs to help them to meet their objectives.</p>
             </div>
-            <img class= "full-width round-corner align-center" src="/Assets/hydrogen/hydrogen-screens.png">
 
-
+            <div class= "container full-width align-center"> 
+                <p class="h2 regular">WIREFRAMES</p>
+                <img class= "full-width round-corner align-center" src="/Assets/hydrogen/wireframes-customer-portal.png">
+                <br>
+                <img class= "full-width round-corner align-center" src="/Assets/hydrogen/wireframes-demand-planner.png">
+                <br>
+                <img class= "full-width round-corner align-center" src="/Assets/hydrogen/wireframes-hyops-draft-plan.png">
+                <br>
+                <br>
+                <br>
+                <p class="h2 regular">UI DESIGN</p>
+                <br>
+                <img class= "full-width round-corner align-center" src="/Assets/hydrogen/hydrogen-screens.png">
+            </div>
+            
             <div class="container col8-width">
                 <p class="h1 regular">
                     REFLECTION
