--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
             </div>
 
             <br><br><br><br><br><br>
-
-            <p class="hero regular align-center">
-                I AM KNOWN AS
-            </p>
-            <p class="h1 light full-width align-center no-margin center">
-                Hard Working • Responsible • Collaborative • Structured • Transparent • Foodie • Spicy • Morning Person • Bouldering • Gardener • Curious • Meticulous • Home Chef • Adaptable • Planning • Crafty • Critical • Kimchi 🥬
-            </p>
-            <br><br><br><br><br><br><br><br><br><br>
-
+            <div class="container full-width align-center">
+                <p class="hero regular align-center">
+                    I AM KNOWN AS
+                </p>
+                <p class="h1 light full-width align-center no-margin center">
+                    Hard Working • Responsible • Collaborative • Structured • Transparent • Foodie • Spicy • Morning Person • Bouldering • Gardener • Curious • Meticulous • Home Chef • Adaptable • Planning • Crafty • Critical • Kimchi 🥬
+                </p>
+                <br><br><br><br><br><br><br><br><br><br>
+            </div>
             <div class="container col8-width align-center">
             <p class="hero regular align-center">
                 Are we a match?
@@ -114,14 +114,17 @@
             Drop Message</a>
             </div>
             <br><br><br><br><br><br><br><br><br><br>
-        </div>
+            </div>
 
         
         <div id="footer">
-            <p class="h3">Suhwa Lee</p>
-            <p class="body-text">suhwa.christina.lee[at]gmail.com</p>
+            <p class="body-text bold">Suhwa Lee</p>
+            <p class="body-text2">suhwa.christina.lee[at]gmail.com</p>
             <a href="https://www.linkedin.com/in/suhwalee/" target="_blank"><img class="logo" src="Assets/home/logo-linkedin.png"></a>
             <a href="https://suhwalee.medium.com" target="_blank" style="padding-left: 8px"><img class="logo" src="Assets/home/logo-medium.png"></a>
+            <p class="caption" style="text-align: left;">
+            Hope you enjoy 100% handmade portfolio, designed and coded by me.<br>
+            I am collecting no data without you knowing.</p>
         </div>
             
     </body>
