--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
@@ -253,10 +253,13 @@
         </div>
     
         <div id="footer">
-            <p class="h3">Suhwa Lee</p>
-            <p class="body-text">suhwa.christina.lee[at]gmail.com</p>
-            <a href="https://www.linkedin.com/in/suhwalee/" target="_blank"><img class="logo" src="/Assets/home/logo-linkedin.png"></a>
-            <a href="https://suhwalee.medium.com" target="_blank" style="padding-left: 8px"><img class="logo" src="/Assets/home/logo-medium.png"></a>
+            <p class="body-text bold">Suhwa Lee</p>
+            <p class="body-text2">suhwa.christina.lee[at]gmail.com</p>
+            <a href="https://www.linkedin.com/in/suhwalee/" target="_blank"><img class="logo" src="Assets/home/logo-linkedin.png"></a>
+            <a href="https://suhwalee.medium.com" target="_blank" style="padding-left: 8px"><img class="logo" src="Assets/home/logo-medium.png"></a>
+            <p class="caption" style="text-align: left;">
+            Hope you enjoy 100% handmade portfolio, designed and coded by me.<br>
+            I am collecting no data without you knowing.</p>
         </div>
             
     </body>
