--- a/work.html
+++ b/work.html
@@ -118,10 +118,13 @@
 
         
         <div id="footer">
-            <p class="h3">Suhwa Lee</p>
-            <p class="body-text">suhwa.christina.lee[at]gmail.com</p>
+            <p class="body-text bold">Suhwa Lee</p>
+            <p class="body-text2">suhwa.christina.lee[at]gmail.com</p>
             <a href="https://www.linkedin.com/in/suhwalee/" target="_blank"><img class="logo" src="Assets/home/logo-linkedin.png"></a>
             <a href="https://suhwalee.medium.com" target="_blank" style="padding-left: 8px"><img class="logo" src="Assets/home/logo-medium.png"></a>
+            <p class="caption" style="text-align: left; line-height:125%;">
+            Hope you enjoy this 100% handmade portfolio, designed and coded by me.<br>
+            And I don't collect any data without your knowledge.
         </div>
             
     </body>
