--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
@@ -96,7 +96,7 @@
                     • Re-negotiated UX/UI design scope → Better roadmapping<br>
                     • Identified critical timeline for system operation<br>
                     • When the algorithm needs to complete the planning<br>
-                </p>
+                </p><br>
                 <p class="body-text bold">
                     Customer & User archetypes<br><br>
                     Development-ready product design for MVP<br><br>
@@ -139,9 +139,9 @@
                 <p class="body-text2">
                     <span class="h3">Imagining future customers and users</span><br><br>
                     Who will be the client’s customers, and how will the customers interact with the client’s internal employees? and how will they interact with the system we are to build? To answer these questions, I facilitated a workshop to define customer and internal user <italic>archetypes</italic> together with the client. 
-                    <br>
-                    - Who are the customers?
-                    - Who are the users?
+                    <br><br>
+                    - Who are the customers?<br>
+                    - Who are the users?<br>
                     - What are their unmet needs?<br><br>
 
             </div>
