Homepage text update
Not a morning person

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     I AM KNOWN AS
                 </p>
                 <p class="h1 light full-width align-center no-margin center">
-                    Hard Working • Responsible • Collaborative • Structured • Transparent • Foodie • Spicy • Morning Person • Bouldering • Gardener • Curious • Meticulous • Home Chef • Adaptable • Planning • Crafty • Critical • Kimchi 🥬
+                    Hard Working • Responsible • Collaborative • Structured • Transparent • Foodie • Spicy • <span style="text-decoration: line-through; text-decoration-thickness: 3px;">Morning Person</span> • Bouldering • Gardener • Curious • Meticulous • Home Chef • Adaptable • Planning • Crafty • Critical • Kimchi 🥬
                 </p>
                 <br><br><br><br><br><br><br><br><br><br>
             </div>
