--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         
         <div class="window">
             <div class="container col8-width center" id="about">
-                <p class="hero">
-                Hi, I am Suhwa.<br>
+                <p class="hero" style="line-height:125%">
+                Hi, I am Suhwa <span><img src=poppy.png width="64" height="64"></span><br>
                 I am a lead product designer with strong UX skills
                 </p>
                 <p class="body-text">With over 8 years of hands-on experience, I create products and product strategies that place users at the center, resulting in valuable products for both customers and the business. I achieve this by establishing a solid understanding of the users through qualitative and quantitative data.
