--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
                 Hi, I am Suhwa <span><img src=poppy.png width="64" height="64"></span><br>
                 I am a lead product designer with strong UX skills
                 </p>
-                <p class="body-text">With over 8 years of hands-on experience, I create products and product strategies that place users at the center, resulting in valuable products for both customers and the business. I achieve this by establishing a solid understanding of the users through qualitative and quantitative data.
+                <p class="body-text">I create digital products and product strategies that are grounded in user research and are enabled by close collaboration with business and technology.
+                Packed with 10 years of experience, I am able to create design of any fidelity to realize design thinking, lean UX, and agile development.
                 <br>
-                Recently, I have expanded my repertoire to include service design, not only to enhance the customer journey but also to ensure the operational efficiency of a business.</p>
+                I am also leading a team of 5 designers supporting their career growth.</p>
             </div>
             
             <p class="hero light align-center">
