Added col3 and col2 option for padded-boxes
made for 3 and 2 column width

--- a/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/agent-app.html
+++ b/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/agent-app.html
@@ -94,7 +94,7 @@
                     Our design team wanted to turn this to an opportunity to advocate human-centered design by starting user research. I wanted to listen to the end-user’s feedback and made design decisions based on that. As a team, we also wanted to establish a user research ritual that we can continue following in the future.
                 </p>
 
-            <div class="padded-boxes">
+            <div class="padded-boxes col3">
                 <section>
                     <p class="body-text2 circle bold heading">1</p>
                     <div class="padded">
@@ -248,7 +248,7 @@
                     IMPACT
                 </p>
 
-                <div class="padded-boxes">
+                <div class="padded-boxes col3">
                 <section>
                     <p class="h1 heading no-margin">+0.54</p>
                     <div class="padded">
