--- a/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/dashboard.html
+++ b/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/dashboard.html
@@ -224,7 +224,7 @@
                     Being a consultant means that you leave your good design with the good hands, and you don't get to stay until your project really blooms and performs. Still, I know we did a great job. How do I know that?
                 </p>
                 
-                <div class="padded-boxes">
+                <div class="padded-boxes col3">
                     <section>
                         <p class="h1 heading">💯</p>
                         <div class="padded">
