--- a/digitalshop.html
+++ b/digitalshop.html
@@ -84,7 +84,7 @@
                     Challenges
                 </p>
 
-                <div class="padded-boxes">
+                <div class="padded-boxes col3">
                     <section>
                         <p class="body-text2 circle bold heading">1</p>
                         <div class="padded">
