--- a/index.html
+++ b/index.html
@@ -41,9 +41,103 @@
                 <p class="body-text">I create digital products and product strategies that are grounded in user research and are enabled by close collaboration with business and technology.
                 Packed with 10 years of experience, I am able to create design of any fidelity to realize design thinking, lean UX, and agile development.
                 <br>
+                <br>
                 I am also leading a team of 5 designers supporting their career growth.</p>
             </div>
             
+            <div class="container col8-width center">
+                <p class="hero light align-center">
+                WHAT I DO
+                <br><br>
+                </p>
+
+                <div class="padded-boxes col2">
+                    <section>
+                        <p class="h2 heading no-margin">Ideate Concepts</p>
+                        <div class="padded">
+                            I often create low-fidelity design in sketches and wireframes to materialize initial ideas into product concepts swiftly. I use them for early alignment and evaluation of the big ideas, assisting crucial product decisions.
+                        </div>
+                    </section>
+
+                    <section>
+                        <img src="/Assets/home/img-ideate-concepts.png" class=heading>
+                    </section>
+                </div>
+
+                <div class="padded-boxes col2">
+                    <section>
+                        <img src="/Assets/home/img-create-uiux.png">
+                        <img src="/Assets/home/img-design-system.png" class=heading>
+                    </section>
+
+                    <section>
+                        <p class="h2 heading no-margin">Create UI/UX Design</p>
+                        <div class="padded">
+                            I design, prototype and iterate with my mission to design human-centric products and services.<br>
+                            <br>
+                            I find joy in creating a simple solution for complex problem space. I have designed for various domains such as fintech, insurance, banking, insurance, e-commerce and more improving various personas’ experience.<br>
+                            <br>
+                            I am experienced with creating and maintaining a design system and have worked with various design systems.
+                        </div>
+                    </section>
+                </div>
+
+                <div class="padded-boxes col2">
+                    <section>
+                        <p class="h2 heading no-margin">Research to Understand or Validate</p>
+                        <div class="padded">
+                            I conduct generative research to uncover human needs and perform evaluative research to validate assumptions or usability. I use various methods to collect insights qualitatively and and quantitatively.
+                        </div>
+                    </section>
+
+                    <section>
+                        <img src="/Assets/home/img-research.png" class=heading>
+                    </section>
+                </div>
+
+                <div class="padded-boxes col2">
+                    <section>
+                        <img src="/Assets/home/img-collaborate.png" class=heading>
+                    </section>
+
+                    <section>
+                        <p class="h2 heading no-margin">Collaborate on Strategy</p>
+                        <div class="padded">
+                            I collaborate closely with business stakeholders and engineers to create human-centric product strategy.<br>
+                            <br>
+                            I also facilitate workshops to create a user-driven product vision.
+                        </div>
+                    </section>
+                </div>
+
+                <div class="padded-boxes col2">
+                    <section>
+                        <p class="h2 heading no-margin">Lead others</p>
+                        <div class="padded">
+                            I am currently leading a team of 5 designers, supporting their growth.<br><br>
+                            We struggled to collect feedback regularly and in a standardized format. I conducted a research to find out the most helpful feedback. Then I came up with a form that any designer could easily use to collect feedback from anyone regardless of their function to nurture a strong feedback culture.
+                        </div>
+                    </section>
+
+                    <section>
+                        <img src="/Assets/home/img-feedback.png" class=heading>
+                    </section>
+                </div>
+
+                <div class="padded-boxes col2">
+                    <section>
+                        <img src="/Assets/home/screenshot.png" class=heading>
+                    </section>
+
+                    <section>
+                        <p class="h2 heading no-margin">Lastly...</p>
+                        <div class="padded">
+                            I code as well! <br><br>
+                            This portfolio is 100% handmade by me.
+                        </div>
+                    </section>
+                </div>
+            </div>
             <p class="hero light align-center">
                 I AM<br>
                 PASSIONATE<br>
