--- a/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/dashboard.html
+++ b/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/dashboard.html
@@ -59,6 +59,10 @@
                 <br><br>
 
                 <p class="body-text bold">
+                <img src=/poppy.png width="24" height="24">
+                </p>
+                
+                <p class="body-text bold">
                     WHAT I DID
                 </p>
 
