new project added

--- a/work.html
+++ b/work.html
@@ -70,6 +70,21 @@
                     <p class="body-text2 project-description no-margin">
                     How leveraged the insights to foster a human-centric design with various stakeholders, enabling us to make informed decisions for designing a better product.</p>
                 </a>
+
+                 <!-- col 3 -->
+                <a class="project-box hover-opaque" href="editor.html">                     
+                    <div class="hover-image-div">
+                        <img class="no-margin round-corner" src="/Assets/work/thumbnail-editor.png">
+                        <img class="no-margin round-corner img-hover" src="/Assets/work/thumbnail-editor-hover.png">
+                    </div>
+
+                    <p class="body-text bold project-description">
+                    Helping users to publish with confidence</p>
+                    <p class="body-text2 project-description no-margin">
+                    I designed an WYSIWYG editor, helping users to finalize and publish content with ease. My design was also very feasible to build, as we did not have to implement advanced functionalities to help the users.</p>
+                </a>
+
+
             </div>
 
 
