--- a/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/editor.html
+++ b/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/editor.html
@@ -57,12 +57,15 @@
 
                 <br><br>
 
+
+                <p class="body-text bold">
+                <img src=/poppy.png width="24" height="24">
+                </p>
                 <p class="body-text bold">
                     WHAT I DID
                 </p>
-
                 <p class="body-text2">
-                    • ToDo<br>
+                    UI/UX design • User Research<br>
                 </p>
             </div>
 
@@ -73,8 +76,8 @@
                     SUMMARY
                 </p>
                 <p class="body-text2">
-                    This project was about building an online service for sustainability consulting. The website supported 2 types of users; customer users to submit their data and see consultants’ advice, and consultant users to analyze the customer’s input and to create a dashboard to provide guidance to their customers.
-
+                    This project was about building an online service for sustainability consulting. The website supported 2 types of users; customer users to submit their data and see consultants’ advice, and consultant users to analyze the customer’s input and to create a dashboard to provide guidance to their customers.<br>
+                    <br>
                     This case study highlights a design for creating a WYSIWYG editor enabling consultants improving their confidence to publish a dashboard.
                 </p>
             </div>
@@ -88,20 +91,15 @@
                 <div class="padded-boxes col2">
                     <section>
                          <!-- box 1 content -->
-                        <p class="body-text bold no-margin">Needs</p>
                         <div class="padded">
-                            We were going to have more graphs<br>
-                            <br>
-                        </div>
-                        <p class="body-text bold no-margin">UX Problems</p>
-                        <div class="padded">
-                            There were obvious UX problems - There were 4 tabs used in 1 screen.<br>
-                            <br>
-                            Consultants were not able to see any of the customer input, graphs shwoing aggregated input and create dashboard at the same time.
+                            The pages needed redesign because we were going to have more graphs and data.
+                            <br><br>
+                            There were also UX problems we wanted to address.<br>
+                            For example, consultant users were not able to see any of data (raw or graphs) when adding advice. There were 4 tabs were stacked in one screen. 
                         </div>
                     </section>
                     <section>
-                        <p class="h1 heading">Images</p>
+                        <img src="/Assets/editor/problem.png" class="heading">
                     </section>
                 </div>
             </div>
@@ -119,21 +117,21 @@
                 <div class="padded-boxes col2">
                     <section>
                          <!-- box 1 content -->
-                        <p class="body-text bold no-margin">Design A</p>
+                        <p class="body-text bold no-margin">Design A</p><br>
                         <div class="padded">
                             I assumed that consultants needed to see data for one topic at a time, and they need to see it while writing content.<br>
                             <br>
                         </div>
-                        <p class="body-text bold no-margin">Images</p>
+                        <img src="/Assets/editor/design-a.png" class="heading">
                     </section>
                     <section>
                          <!-- box 2 content -->
-                        <p class="body-text bold no-margin">Design B</p>
+                        <p class="body-text bold no-margin">Design B</p><br>
                         <div class="padded">
                             I assumed that the users needed to process all data & graphs first then work on all content afterwards.<br>
                             <br>
                         </div>
-                        <p class="body-text bold no-margin">Images</p>
+                        <img src="/Assets/editor/design-b.png" class="heading">
                     </section>
                 </div>
             </div>
@@ -146,12 +144,12 @@
                         INSIGHTS FROM RESEARCH
                         </p>
                         <div class="body-text bold no-margin">
-                           Images
+                           <img src="/Assets/editor/research.png" class="heading">
                         </div>
                     </section>
                     <section>
                          <!-- box 2 content -->
-                        <p class="body-text bold no-margin">Images</p>
+                        <img src="/Assets/editor/interviews.png" class="heading">
                         <div class="padded">
                         We talked to consultants to understand their way of work better.
 
@@ -172,6 +170,8 @@
                 <p class="body-text2">In the end, I created an WYSIWYG type of editor where the consultants could see what the client will see during editing. Instead of recreating Microsoft Word, we decided to facilitate the consultant’s working flow using Word.<br>
                 <br>
                 The new look of the editor not only allowed the consultants to see all the graphs but also to see what the clients would see while editing. It gave the consultants reassurance of the dashboard they were publishing. Developers were also happy because we did not have to implement Word’s functionality such as collaborative edit, or auto-save.</p><br><br>
+
+                <img src="/Assets/editor/final-design.png" class="heading">
             </div>
         </div>
     
