--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                             I find joy in creating a simple solution for complex problem space. I have designed for various domains such as fintech, insurance, banking, insurance, e-commerce and more improving various personas’ experience.<br>
                             <br>
                             I am experienced with creating and maintaining a design system and have worked with various design systems.
+                            <br><br><br>
+                        </div>
+
+                        <div class= "bold">
+                        <a href="editor.html">
+                            View Project&nbsp; 
+                            <span><img src="/Assets/home/icon-arrow-right.png" width="16" height="16"></span>
+                        </a>
                         </div>
                     </section>
                 </div>
@@ -87,7 +95,16 @@
                         <p class="h2 heading no-margin">Research to Understand or Validate</p>
                         <div class="padded">
                             I conduct generative research to uncover human needs and perform evaluative research to validate assumptions or usability. I use various methods to collect insights qualitatively and and quantitatively.
+                            <br><br><br>
                         </div>
+                        
+                        <div class= "bold">
+                        <a href="agent-app.html">
+                            View Project&nbsp; 
+                            <span><img src="/Assets/home/icon-arrow-right.png" width="16" height="16"></span>
+                        </a>
+                        </div>
+
                     </section>
 
                     <section>
@@ -106,13 +123,23 @@
                             I collaborate closely with business stakeholders and engineers to create human-centric product strategy.<br>
                             <br>
                             I also facilitate workshops to create a user-driven product vision.
+                        <br><br><br>
                         </div>
+                        
+                        <div class= "bold">
+                        <a href="hydrogen.html">
+                            View Project&nbsp; 
+                            <span><img src="/Assets/home/icon-arrow-right.png" width="16" height="16"></span>
+                        </a>
+                        </div>
+
+
                     </section>
                 </div>
 
                 <div class="padded-boxes col2">
                     <section>
-                        <p class="h2 heading no-margin">Lead others</p>
+                        <p class="h2 heading no-margin">Lead Others</p>
                         <div class="padded">
                             I am currently leading a team of 5 designers, supporting their growth.<br><br>
                             We struggled to collect feedback regularly and in a standardized format. I conducted a research to find out the most helpful feedback. Then I came up with a form that any designer could easily use to collect feedback from anyone regardless of their function to nurture a strong feedback culture.
