--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Packed with 10 years of experience, I am able to create design of any fidelity to realize design thinking, lean UX, and agile development.
                 <br>
                 <br>
-                I am also leading a team of 5 designers supporting their career growth.</p>
+                I lead a small design team, helping their career growth.</p>
             </div>
             
             <div class="container col8-width center">
@@ -141,8 +141,9 @@
                     <section>
                         <p class="h2 heading no-margin">Lead Others</p>
                         <div class="padded">
-                            I am currently leading a team of 5 designers, supporting their growth.<br><br>
-                            We struggled to collect feedback regularly and in a standardized format. I conducted a research to find out the most helpful feedback. Then I came up with a form that any designer could easily use to collect feedback from anyone regardless of their function to nurture a strong feedback culture.
+                            I am leading a team of 5 designers, focusing on their growth.<br>
+                            <br>
+                            I developed a feedback ritual enabling designers to request feedback from colleagues and clients, enhancing our feedback culture, supporting career development, and ensuring objective performance reviews. Additionally, I researched effective feedback across different job functions.
                         </div>
                     </section>
 
