Retry vertical align poppy image in About

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="window">
             <div class="container col8-width center" id="about">
                 <p class="hero" style="line-height:125%">
-                Hi, I am Suhwa <span><img src=poppy.png width="64" height="64" vertical-align="middle"></span><br>
+                Hi, I am Suhwa <span><img class="vertical-align" src=poppy.png width="64" height="64"></span><br>
                 I am a lead product designer with strong UX skills
                 </p>
                 <p class="body-text">I create digital products and product strategies that are grounded in user research and are enabled by close collaboration with business and technology.
