--- a/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/editor.html
+++ b/866ef227abf3aa6db55f96b7075c8f416f4284c2acb6f96a83340876a6c27deb/editor.html
@@ -50,9 +50,13 @@
         
         <div class="window">
             <div class="container col8-width">
+                <p class="body-text bold">
+                    Rabobank
+                </p>
                 <p class="hero no-margin">
                     Dashboard Editor
                 </p>
+                <br>
                 <p class="body-text2">Creating a WYSIWYG editor enabling consultants improving their confidence to publish a dashboard.</p>
 
                 <br><br>
